--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,7 @@
 
     // Bundler mode
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
 
     // Best practices
     "strict": true,
@@ -23,6 +21,17 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    "noPropertyAccessFromIndexSignature": false,
+
+    // Emit files
+    "outDir": "dist",            // Output folder
+    "declaration": true,         // Generate .d.ts files
+    "declarationMap": true,      // Generate declaration maps
+    "sourceMap": true,           // Generate .map files
+    "esModuleInterop": true,
+
+    // Disable noEmit to allow file output
+    "noEmit": false
+  },
+  "include": ["src"]
 }
