--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "A tiny utility (mainly interfaces) with zero dependencies to standardize handling results that may succeed or fail, inspired by Go-style error handling.",
   "homepage": "https://github.com/constraintAutomaton/result-interface-ts",
   "license": "MIT",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "keywords": [
@@ -21,7 +21,8 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -37,7 +38,9 @@
     "typescript": "^5"
   },
   "scripts": {
-    "build": "bun build ./src/index.ts --outdir dist --sourcemap && tsc --emitDeclarationOnly",
-    "publish-npm": "bun run build && npm publish"
+    "build:all" : "bun run build && bun run build:cjs",
+    "build": "bun build ./src/index.ts --outdir dist --sourcemap --outdir dist/esm --production && tsc --emitDeclarationOnly",
+    "build:cjs": "bun build ./src/index.ts --format 'cjs' --outdir dist/cjs --sourcemap --production && tsc --emitDeclarationOnly",
+    "publish-npm": "build:all && npm publish"
   }
 }
