--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "typescript": "^5"
   },
   "scripts": {
-    "build:all" : "bun run build && bun run build:cjs",
-    "build": "bun build ./src/index.ts --outdir dist --sourcemap --outdir dist/esm --production && tsc --emitDeclarationOnly",
-    "build:cjs": "bun build ./src/index.ts --format 'cjs' --outdir dist/cjs --sourcemap --production && tsc --emitDeclarationOnly",
+    "build:all" : "bun run build && bun run build:cjs && tsc --emitDeclarationOnly",
+    "build": "bun build ./src/index.ts --outdir dist --sourcemap --outdir dist/esm --production",
+    "build:cjs": "bun build ./src/index.ts --format 'cjs' --outdir dist/cjs --sourcemap --production",
     "publish-npm": "bun run build:all && npm publish"
   }
 }
